--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "graphql-request": "^1.8.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
     "styled-normalize": "^8.0.7",
